Connect to azure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/immunet
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=${SQLAZURECONNSTR_IMMUNET_DB}
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
