--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<version>7.4.1.jre8</version>
-	</dependency>
+			<scope>runtime</scope>
+		</dependency>
 
 	</dependencies>
 
@@ -52,6 +52,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				
 			</plugin>
 		</plugins>
 	</build>
